tests/compile-fail/integration__integration__ecl_features__eosd_exported_fn_bad_siggies.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: invalid type for param in EoSD ECL
  ┌─ <input>:8:11
  │
8 │ void bad2(var x) {}
  │           ^^^

error: too many int params for EoSD ECL function
   ┌─ <input>:10:18
   │
10 │ void bad3(int x, int y) {}
   │                  ^^^^^ extra int param
   │
   = exported EoSD ECL functions are limited to 1 int and 1 float

error: too many float params for EoSD ECL function
   ┌─ <input>:12:27
   │
12 │ void bad4(float x, int y, float z) {}
   │                           ^^^^^^^ extra float param
   │
   = exported EoSD ECL functions are limited to 1 int and 1 float


